--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 spark/
 terraform/.terraform.lock.hcl
-terraform/terraform.tfstate
+terraform/terraform.tfstate/
 terraform/.terraform/providers/registry.terraform.io/hashicorp/google/6.14.1/linux_amd64/LICENSE.txt
 terraform/.terraform/providers/registry.terraform.io/hashicorp/google/6.14.1/linux_amd64/terraform-provider-google_v6.14.1_x5
+terraform/.terraform.tfstate.lock.info
+terraform/terraform.tfstate.backup
+terraform.tfstate
